<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.authentication.presentation.register.RegisterFragment"
    android:padding="@dimen/space_16dp">

    <com.habibi.core.custom_view.TextFieldLayout
        android:id="@+id/ed_wrap_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.habibi.core.custom_view.TextFieldEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editTextType="name"
            android:inputType="textCapWords"/>

    </com.habibi.core.custom_view.TextFieldLayout>

    <com.habibi.core.custom_view.TextFieldLayout
        android:id="@+id/ed_wrap_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/space_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_wrap_register_name">

        <com.habibi.core.custom_view.TextFieldEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editTextType="email"
            android:inputType="textEmailAddress"/>

    </com.habibi.core.custom_view.TextFieldLayout>

    <com.habibi.core.custom_view.TextFieldLayout
        android:id="@+id/ed_wrap_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/space_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_wrap_register_email">

        <com.habibi.core.custom_view.TextFieldEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editTextType="password"
            android:inputType="textPassword"/>

    </com.habibi.core.custom_view.TextFieldLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="@dimen/space_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_wrap_register_password" />

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/button_register"
        app:layout_constraintStart_toStartOf="@+id/button_register"
        app:layout_constraintTop_toTopOf="@+id/button_register"
        app:layout_constraintBottom_toBottomOf="@id/button_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>